--- a/deploy/helm/chaosblade-operator/values.yaml
+++ b/deploy/helm/chaosblade-operator/values.yaml
@@ -2,7 +2,7 @@
 
 # chaosblade-operator
 operator:
-  repository: chaosbladeio/chaosblade-operator
+  repository: registry.cn-shanghai.aliyuncs.com/guohz-sit/chaosblade-operator
   version: 1.7.1
   # image.pullPolicy: must be Always|IfNotPresent|Never
   pullPolicy: IfNotPresent
@@ -11,7 +11,7 @@ operator:
   reconcileCount: 20
 
 blade:
-  repository: chaosbladeio/chaosblade-tool
+  repository: registry.cn-shanghai.aliyuncs.com/guohz-sit/chaosblade-tool
   version: 1.7.1
   pullPolicy: IfNotPresent
   downloadUrl: ""
